# lyricsipsum

./: README.md  pyproject.toml
src/lyricsipsum/: __main__.py
