# vi: set syntax=toml ts=4 sw=4 sts=4 et ff=unix ai si :

[project]
name = "lyricsipsum"
version = "1.1.3"
description = "Generates Lorem Ipsum text using song lyrics"
authors = [
    {name="Steve Scholnick", email="scholnicks@gmail.com"}
]
readme = "README.md"
license="MIT"
license-files=["LICENSE"]
requires-python = ">=3.14"
dependencies = [
    "docopt-ng (>=0.9.0,<0.10.0)",
    "lyricsgenius (>=3.7.2,<4.0.0)"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Topic :: Utilities"
]
keywords = ["lorem", "ipsum", "text", "generator", "lyrics", "utility", "command-line", "cli"]

[project.urls]
homepage = "https://pypi.org/project/lyricsipsum/"
repository = "https://github.com/scholnicks/lyricsipsum/"
issues = "https://github.com/scholnicks/lyricsipsum/issues"

[tool.poetry]
packages = [{include = "lyricsipsum", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
lyricsipsum = "lyricsipsum.__main__:main"
